--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,13 @@
   "manifest_version": 3,
   "name": "FoxySpoofers",
   "version": "1.0",
-  "description": "A modern Chrome extension to create a virtual camera, spoof geolocation, and manage a local proxy directly in your browser.",
+  "description": "A modern Chrome extension to create a virtual camera, spoof geolocation, spoof user agent, and manage a local proxy directly in your browser.",
   "permissions": [
-    "proxy",
+    "declarativeNetRequest",
+    "declarativeNetRequestWithHostAccess",
     "storage",
-    "webRequest"
+    "proxy",
+    "tabs"
   ],
   "host_permissions": [
     "<all_urls>"
@@ -17,34 +19,40 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"]
+      "js": ["content.js"],
+      "run_at": "document_start"
     },
     {
-      "matches": ["*://*/virtual-camera-interface"],
-      "js": ["popup.js"]
+      "matches": ["*://*/foxyspoofers"],
+      "js": [
+        "scripts/popup/preloader.js",
+        "scripts/popup/virtual-camera-db.js",
+        "scripts/popup/toast.js",
+        "scripts/popup/video-state-manager.js",
+        "scripts/popup/video-storage.js",
+        "scripts/popup/settings-ui.js",
+        "scripts/popup/virtual-camera-app.js",
+        "scripts/popup/main.js"
+      ],
+      "run_at": "document_start"
     }
   ],
   "action": {
     "default_icon": {
-      "16": "icon-16.png",
-      "48": "icon-48.png",
-      "128": "icon-128.png"
+      "16": "icons/icon-16.png",
+      "48": "icons/icon-48.png",
+      "128": "icons/icon-128.png"
     }
   },
   "icons": {
-    "16": "icon-16.png",
-    "48": "icon-48.png",
-    "128": "icon-128.png"
+    "16": "icons/icon-16.png",
+    "48": "icons/icon-48.png",
+    "128": "icons/icon-128.png"
   },
   "web_accessible_resources": [
     {
       "resources": [
-        "assets/virtual.mp4",
-        "inject-gum.js",
-        "inject-geo.js",
-        "popup/popup.html",
-        "popup/popup.js",
-        "popup/popup.css"
+        "*"
       ],
       "matches": ["<all_urls>"]
     }
