feat: Implement navigation spoofing and Leaflet map integration
- Added Leaflet map functionality with geocoding support in main.js
- Introduced NavSpoofers class to handle navigation attribute spoofing
- Created NavSpoofSettings class for fetching user agent and other settings
- Developed SpoofAttributes class to manage various spoofable attributes
- Integrated settings fetching from chrome.storage or meta tags
- Enhanced navigator properties such as userAgent, language, and screen resolution
- Implemented event listeners for dynamic updates in navigation spoofing

--- a/manifest.json
+++ b/manifest.json
@@ -28,6 +28,7 @@
       "js": [
         "scripts/popup/preloader.js",
         "scripts/popup/virtual-camera-db.js",
+        "scripts/popup/spoof-attributes.js",
         "scripts/popup/toast.js",
         "scripts/popup/video-state-manager.js",
         "scripts/popup/video-storage.js",
